--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0" />
     <meta name="title" content="アメックスプラチナカード" />
-    <meta name="description" content="遥か高ステータスな人間へ" />
+    <meta name="description" content="プラチナという至高の輝き、それは行動力の象徴。" />
     <meta name="keywords" />
     <meta property="og:url" content="http://localhost:3000/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="アメックスプラチナカード" />
-    <meta property="og:description" content="遥か高ステータスな人間へ" />
+    <meta property="og:description" content="プラチナという至高の輝き、それは行動力の象徴。" />
     <meta property="og:image" content="assets/images/share/ogp.png" />
     <meta property="og:site_name" content="アメックスプラチナカード" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="アメックスプラチナカード" />
-    <meta name="twitter:description" content="遥か高ステータスな人間へ" />
-    <meta name="twitter:image" content="assets/images/share/ogp.png" />
+    <meta name="twitter:description" content="プラチナという至高の輝き、それは行動力の象徴。" />
+    <meta name="twitter:image" content="assets/images/share/ogp.png"/>
     <link rel="shortcut icon" href="assets/images/favicon.ico" />
     <link rel="stylesheet" href="assets/styles/app.css" />
     <link
@@ -45,20 +45,20 @@
                         </div>
                         <div class="p-menu_link_area">
                             <ul class="p-menu_links" data-target="browserChecker">
-                                <li class="link"><a href="cp/index.html" target="_self"
+                                <li class="link"><a href="" target="_self"
                                         data-target="browserChecker"><span>10万人サンプリングキャンペーン</span></a></li>
-                                <li class="link"><a href="special/index.html" target="_self"
+                                <li class="link"><a href="" target="_self"
                                         data-target="browserChecker"><span>スペシャル</span></a></li>
-                                <li class="link"><a href="dayemulsion/index.html" target="_self"
+                                <li class="link"><a href="" target="_self"
                                         data-target="browserChecker"><span>薬用 日中用乳液</span></a></li>
-                                <li class="link"><a href="movie/index.html" target="_self"
+                                <li class="link"><a href="" target="_self"
                                         data-target="browserChecker"><span>MOVIE</span></a></li>
-                                <li class="link"><a href="trialset/index.html" target="_self"
+                                <li class="link"><a href="" target="_self"
                                         data-target="browserChecker"><span>トライアルセット</span></a></li>
-                                <li class="link"><a href="products/index.html" target="_self"
+                                <li class="link"><a href="" target="_self"
                                         data-target="browserChecker"><span>商品ラインナップ</span></a></li>
                                 <li class="link"><a
-                                        href="http://www.shiseido.co.jp/sw/navi/shopsearchresult.html?sbc=1550&amp;searchMethodKbn=2"
+                                        href=""
                                         target="_blank" data-target="browserChecker"><span>お取り扱い店舗</span></a></li>
                             </ul>
                         </div>
@@ -96,7 +96,7 @@
             <div class="p-opening" data-module="Opening">
                 <div class="p-opening_border p-opening_border-top"></div>
                 <div class="p-opening_border p-opening_border-bot"></div>
-                <div class="p-opening_logo"><img src="logo.png" alt="REVITAL" /></div>
+                <div class="p-opening_logo"><img src="howto_card.jpg" alt="" /></div>
                 <div class="p-opening_inner">
                     <div class="p-opening_blur-area">
                         <div class="p-opening_circle p-opening_circle-01"></div>
@@ -363,7 +363,7 @@
                                             class='u-month is-strong'>9</span><span class='u-month'>月</span><span
                                             class='u-day is-strong'>20</span>
                                         <span class='u-week'>日（日）</span>まで</span>
-                                </p><a class="c-btn add-line c-top_block_btn" href="cp/index.html"
+                                </p><a class="c-btn add-line c-top_block_btn" href="http://www.saisoncard.co.jp/rd/3161813-sbs"
                                     data-target="browserChecker" data-FadeIn="2.5">お申込みはこちら<span class="lineBox"><span
                                             class="animLine"></span></span></a>
                             </div>
@@ -431,7 +431,7 @@
                                             class='u-month is-strong'>9</span><span class='u-month'>月</span><span
                                             class='u-day is-strong'>20</span>
                                         <span class='u-week'>日（日）</span>まで</span>
-                                </p><a class="c-btn add-line c-top_block_btn" href="cp/index.html"
+                                </p><a class="c-btn add-line c-top_block_btn" href="http://www.saisoncard.co.jp/rd/3161813-sbs"
                                     data-target="browserChecker" data-FadeIn="2.5">お申込みはこちら<span class="lineBox"><span
                                             class="animLine"></span></span></a>
                             </div>
@@ -493,7 +493,7 @@
                                     圧倒的な<br>ポイント・プログラム</h3>
                                 <p class="c-top_block__copy add-line__before" data-target="browserChecker"
                                     data-FadeIn="2">数量限定発売。</p><a class="c-btn add-line c-top_block_btn"
-                                    href="trialset/index.html" data-target="browserChecker"
+                                    href="http://www.saisoncard.co.jp/rd/3161813-sbs" data-target="browserChecker"
                                     data-FadeIn="2.5">お申込みはこちら<span class="lineBox"><span
                                             class="animLine"></span></span></a>
                             </div>
@@ -539,9 +539,9 @@
 
 
             </div>
-            <a class="c-bnr" href="cp/index.html" data-module="sticky">
+            <a class="c-bnr" href="http://www.saisoncard.co.jp/rd/3161813-sbs" data-module="sticky">
                 <div class="use-top">
-                    <div class="bg"><img src="assets/images/common/bnr/bnr.jpg" alt="REVITAL" /></div>
+                    <div class="bg"><img src="assets/images/common/bnr/bnr.jpg" alt="" /></div>
                     <div class="content">
                         <h3 class="c-bnr__ttl" data-target="browserChecker">P<span>LATINUM</span> </h3>
                         <p class="c-bnr__hdg" data-target="browserChecker">セゾンアメックスプラチナカード</p>
@@ -625,8 +625,8 @@
                         <input type="checkbox" id="cp_checkbox" />
                         <label class="p-application__concent__checkbox__label" for="cp_checkbox">応募規約に同意する</label>
                     </form><a class="p-application__concent__btn c-btn add-line" data-module="ScrollFade"
-                        href="https://www.shiseido.co.jp/wpmember/campaign/index.php?sisaku_id=15202002210101"
-                        target="_blank" data-target="browserChecker">サンプルプレゼントに応募する<span class="lineBox"><span
+                        href="http://www.saisoncard.co.jp/rd/3161813-sbs"
+                        target="_blank" data-target="browserChecker">お申込みはこちら<span class="lineBox"><span
                                 class="animLine"></span></span></a>
                 </div>
             </div>
@@ -645,7 +645,7 @@
                     <div class="c-footer__block">
                         <div class="c-footer_product_area">
                             <h2 class="c-footer__logo"><img src="assets/images/common/h1/header_logo_box.gif" alt="REVITAL" /></h2>
-                            <p class="c-footer__sub" data-target="browserChecker">「光ダメージ」に向き合う、新リバイタル、誕生。</p>
+                            <p class="c-footer__sub" data-target="browserChecker">プラチナという至高の輝き、それは行動力の象徴。</p>
                         </div>
                         <div class="c-footer_link_area">
                             <ul class="c-footer_links" data-target="browserChecker">
