ロゴと文言を訂正しました

--- a/index.html
+++ b/index.html
@@ -46,20 +46,7 @@
                         <div class="p-menu_link_area">
                             <ul class="p-menu_links" data-target="browserChecker">
                                 <li class="link"><a href="" target="_self"
-                                        data-target="browserChecker"><span>10万人サンプリングキャンペーン</span></a></li>
-                                <li class="link"><a href="" target="_self"
-                                        data-target="browserChecker"><span>スペシャル</span></a></li>
-                                <li class="link"><a href="" target="_self"
-                                        data-target="browserChecker"><span>薬用 日中用乳液</span></a></li>
-                                <li class="link"><a href="" target="_self"
-                                        data-target="browserChecker"><span>MOVIE</span></a></li>
-                                <li class="link"><a href="" target="_self"
-                                        data-target="browserChecker"><span>トライアルセット</span></a></li>
-                                <li class="link"><a href="" target="_self"
-                                        data-target="browserChecker"><span>商品ラインナップ</span></a></li>
-                                <li class="link"><a
-                                        href=""
-                                        target="_blank" data-target="browserChecker"><span>お取り扱い店舗</span></a></li>
+                                        data-target="browserChecker"><span>カード詳細ページ</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -223,6 +210,7 @@
                                             srcset="./assets/images/top/mv_bg_human_sp.jpg" />
                                         <!--<img src="assets/images/top/mv_bg_human_pc.jpg" alt="" />-->
                                         <video src="Tower - 49845.mp4" autoplay poster="myVideo.mp4" loop muted></video>
+                                        <div class="blackBox"></div>
                                     </picture>
                                 </div>
                             </div>
@@ -280,16 +268,16 @@
                                         毎日に刺激がない</li>
                                     <li class="c-know_of__list__item" data-module="ScrollFade"
                                         data-target="browserChecker">
-                                        毎日に刺激がない</li>
+                                        周りより卓越した存在になりたい</li>
                                     <li class="c-know_of__list__item" data-module="ScrollFade"
                                         data-target="browserChecker">
-                                        毎日に刺激がない</li>
+                                        最近出張や旅行に出かける事が多い</li>
                                     <li class="c-know_of__list__item" data-module="ScrollFade"
                                         data-target="browserChecker">
-                                        毎日に刺激がない</li>
+                                        モテたい</li>
                                     <li class="c-know_of__list__item" data-module="ScrollFade"
                                         data-target="browserChecker">
-                                        毎日に刺激がない</li>
+                                        末だ見ぬ体験・経験をしてみたい</li>
                                 </ul>
                             </div>
                         </div>
@@ -410,7 +398,7 @@
                                     <div class="c-top_panel_object__shadow">
                                         <picture>
                                             <img class="img1"
-                                                src="logo.png" alt="" />
+                                                src="hand.png" alt="" />
                                         </picture>
                                     </div>
                                 </div>
@@ -474,7 +462,7 @@
                                     <div class="c-top_panel_object__shadow">
                                         <picture>
                                             <source media="(max-width: 768px)"/><img class="img2"
-                                                src="logo.png" class="tree" alt="" />
+                                                src="point.png" class="tree" alt="" />
                                         </picture>
                                     </div>
                                     <div class="c-top_panel_object__container">
