ズレ修正アイコンの

--- a/index.html
+++ b/index.html
@@ -344,11 +344,7 @@
                                 <h3 class="c-top_block__hdg--lv2" data-target="browserChecker" data-lineAnim="1.2">
                                     トラベル＆ダイニング</h3>
                                 <p class="c-top_block__copy add-line__before" data-target="browserChecker"
-                                    data-FadeIn="2"><span class='u-term is-purple'>応募期限：<span
-                                            class='u-year is-strong'>2020</span><span class='u-year'>年</span><span
-                                            class='u-month is-strong'>9</span><span class='u-month'>月</span><span
-                                            class='u-day is-strong'>20</span>
-                                        <span class='u-week'>日（日）</span>まで</span>
+                                    data-FadeIn="2"><span class='u-term is-purple'>究極の豊かさに満ちた日々へご案内</span>
                                 </p><a class="c-btn add-line c-top_block_btn" href="http://www.saisoncard.co.jp/rd/3161813-sbs"
                                     data-target="browserChecker" data-FadeIn="2.5">お申込みはこちら<span class="lineBox"><span
                                             class="animLine"></span></span></a>
@@ -668,20 +664,7 @@
                         <div class="c-footer_link_area">
                             <ul class="c-footer_links" data-target="browserChecker">
                                 <li class="link"><a href="" target="_self"
-                                        data-target="browserChecker"><span>10万人サンプリングキャンペーン</span></a></li>
-                                <li class="link"><a href="" target="_self"
-                                        data-target="browserChecker"><span>スペシャル</span></a></li>
-                                <li class="link"><a href="" target="_self"
-                                        data-target="browserChecker"><span>薬用 日中用乳液</span></a></li>
-                                <li class="link"><a href="" target="_self"
-                                        data-target="browserChecker"><span>MOVIE</span></a></li>
-                                <li class="link"><a href="" target="_self"
-                                        data-target="browserChecker"><span>トライアルセット</span></a></li>
-                                <li class="link"><a href="" target="_self"
-                                        data-target="browserChecker"><span>商品ラインナップ</span></a></li>
-                                <li class="link"><a
-                                        href="http://www.shiseido.co.jp/sw/navi/shopsearchresult.html?sbc=1550&amp;searchMethodKbn=2"
-                                        target="_blank" data-target="browserChecker"><span>お取り扱い店舗</span></a></li>
+                                        data-target="browserChecker"><span>カード詳細ページ</span></a></li>
                             </ul>
                         </div>
                     </div>
