--- a/index.html
+++ b/index.html
@@ -329,9 +329,6 @@
                                             <img class="img0" src="bady-abbas-67GC0YaeGQc-unsplash.jpg" alt="" />
                                         </picture>
                                     </div>
-                                    <div class="c-top_panel_object__container">
-
-                                    </div>
                                 </div>
 
                             </div>
@@ -394,9 +391,6 @@
                                         <picture>
                                             <img class="img0" src="adi-goldstein-EUsVwEOsblE-unsplash.jpg" alt="" />
                                         </picture>
-                                    </div>
-                                    <div class="c-top_panel_object__container">
-
                                     </div>
                                 </div>
 
@@ -463,8 +457,6 @@
                                             <source media="(max-width: 768px)" /><img class="img2"
                                                 src="traveler-2203666_1280.jpg" class="tree" alt="" />
                                         </picture>
-                                    </div>
-                                    <div class="c-top_panel_object__container">
                                     </div>
                                 </div>
                             </div>
@@ -546,8 +538,6 @@
                                             <source media="(max-width: 768px)" /><img class="img2"
                                                 src="helena-lopes-e3OUQGT9bWU-unsplash.jpg" class="tree" alt="" />
                                         </picture>
-                                    </div>
-                                    <div class="c-top_panel_object__container">
                                     </div>
                                 </div>
                             </div>
@@ -772,10 +762,7 @@
                     </p>
                 </div>
                 <div class="p-application__concent" data-module="ScrollFade ConcentBtn">
-                    <form class="p-application__concent__checkbox" name="concent" data-target="browserChecker">
-                        <input type="checkbox" id="cp_checkbox" />
-                        <label class="p-application__concent__checkbox__label" for="cp_checkbox">応募規約に同意する</label>
-                    </form><a class="p-application__concent__btn c-btn add-line" data-module="ScrollFade"
+                    <a class="p-application__concent__btn c-btn add-line" data-module="ScrollFade"
                         href="http://www.saisoncard.co.jp/rd/3161813-sbs" target="_blank"
                         data-target="browserChecker">お申込みはこちら<span class="lineBox"><span
                                 class="animLine"></span></span></a>
