大体のレスポンシブは対応しました

--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                             <div class="c-use__cont__list__item__inner">
                                 <div class="object">
                                     <div class="object__inner">
-                                        <p class="ttl" data-target="browserChecker">ショッピングで<br>JALのマイルを貯める</p>
+                                        <p class="ttl ttl4" data-target="browserChecker">ショッピングで<br>JALのマイルを貯める</p>
                                         <p class="border">海外/国内空港ラウンジサービス</p>
                                         <p class="txt" data-target="browserChecker">
                                             SAISON MILE CULB
@@ -653,7 +653,7 @@
                             <div class="c-use__cont__list__item__inner">
                                 <div class="object">
                                     <div class="object__inner">
-                                        <p class="ttl" data-target="browserChecker">ご出発の前に<br>くつろぎのひとときを</p>
+                                        <p class="ttl ttl4" data-target="browserChecker">ご出発の前に<br>くつろぎのひとときを</p>
                                         <p class="border">海外/国内空港ラウンジサービス</p>
                                         <p class="txt" data-target="browserChecker">
                                             海外1,300ヵ所以上の空港ラウンジをご利用いただける｢プライオリティ・パス｣に無料でご登録いただけます。(通常年会費429米ドル)
@@ -666,7 +666,7 @@
                             <div class="c-use__cont__list__item__inner">
                                 <div class="object">
                                     <div class="object__inner">
-                                        <p class="ttl" data-target="browserChecker">楽しい旅行には<br>万全の備えを</p>
+                                        <p class="ttl ttl4" data-target="browserChecker">楽しい旅行には<br>万全の備えを</p>
                                         <p class="border">海外/国内旅行損害保険</p>
                                         <p class="txt" data-target="browserChecker">
                                             海外旅行中の事故について最高1億円(注1)まで、国内旅行中の事故について最高5,000万円(注2)までを自動的に補償いたします。会員様・ファミリーカード会員様はもちろん、ご家族(注3)も補償いたします。(注4)
@@ -688,7 +688,7 @@
                         <div class="c-use__cont__list__item__inner">
                             <div class="object">
                                 <div class="object__inner">
-                                    <p class="ttl" data-target="browserChecker">専任のコンシェルジュが<br>あなたをサポート</p>
+                                    <p class="ttl ttl4" data-target="browserChecker">専任のコンシェルジュが<br>あなたをサポート</p>
                                     <p class="border">コンシェルジュサービス</p>
                                     <p class="txt" data-target="browserChecker">
                                         国内レストランのご案内・ご予約やハイヤー送迎サービス、フラワーギフトのお手配などさまざまなお問い合わせに専任のスタッフが24時間365日お応えいたします。
@@ -701,7 +701,7 @@
                         <div class="c-use__cont__list__item__inner">
                             <div class="object">
                                 <div class="object__inner">
-                                    <p class="ttl" data-target="browserChecker">空港までの<br>移動を手軽に</p>
+                                    <p class="ttl ttl4" data-target="browserChecker">空港までの<br>移動を手軽に</p>
                                     <p class="border">手荷物無料宅配サービス</p>
                                     <p class="txt" data-target="browserChecker">
                                         国際線をご利用の際、空港－ご自宅間の手荷物配送をスーツケース1個まで無料でご利用いただけます。ファミリーカード会員様も同様にご利用いただけます。</p>
