文字をしゅせいしました

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                             </div>
                             <div class="c-top_block__content">
                                 <h2 class="c-top_block__sec_ttl ttl" data-target="browserChecker" data-FadeIn="0.6">
-                                    security
+                                    SECURITY
                                 </h2>
                                 <p class="c-top_block__hdg--lv3" data-target="browserChecker" data-FadeIn="0.9">
                                     安心安全にカードをご利用いただくために</p>
@@ -462,8 +462,7 @@
                             </div>
                             <div class="c-top_block__content">
                                 <h2 class="c-top_block__sec_ttl ttl3" data-target="browserChecker" data-FadeIn="0.6">
-                                    POINTPOINT
-                                    SERVICE</h2>
+                                    SERVICE OF TRIP</h2>
                                 <p class="c-top_block__hdg--lv3" data-target="browserChecker" data-FadeIn="0.9">
                                     旅に役立つ様々なサービスをご利用いただけます</p>
                                 <h3 class="c-top_block__hdg--lv2" data-target="browserChecker" data-lineAnim="1.2">
@@ -486,7 +485,7 @@
                         <ul>
                             <li class="p-accordion__container" data-module="ScrollFade Accordion">
                                 <div class="p-accordion__btn">
-                                    <div class="p-accordion__btn__ttl" data-target="browserChecker">TRAVEL</div>
+                                    <div class="p-accordion__btn__ttl" data-target="browserChecker">旅行にあたって</div>
                                     <div class="p-accordion__btn__subttl" data-target="browserChecker">APPLICATION
                                         REQUIREMENTS
                                     </div>
@@ -543,8 +542,7 @@
                             </div>
                             <div class="c-top_block__content">
                                 <h2 class="c-top_block__sec_ttl ttl3" data-target="browserChecker" data-FadeIn="0.6">
-                                    POINTPOINT
-                                    SERVICE</h2>
+                                    SPECIAL LIFE</h2>
                                 <p class="c-top_block__hdg--lv3" data-target="browserChecker" data-FadeIn="0.9">
                                     特別なサービスで日常に彩りを</p>
                                 <h3 class="c-top_block__hdg--lv2" data-target="browserChecker" data-lineAnim="1.2">
@@ -566,7 +564,7 @@
                         <ul>
                             <li class="p-accordion__container" data-module="ScrollFade Accordion">
                                 <div class="p-accordion__btn">
-                                    <div class="p-accordion__btn__ttl" data-target="browserChecker">SPECIAL LIFE</div>
+                                    <div class="p-accordion__btn__ttl" data-target="browserChecker">特別な日常へ</div>
                                     <div class="p-accordion__btn__subttl" data-target="browserChecker">APPLICATION
                                         REQUIREMENTS
                                     </div>
