画像を貼ってみた

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                                     <div class="p-accordion__btn__subttl" data-target="browserChecker">APPLICATION
                                         REQUIREMENTS
                                     </div>
-                                    <div class="p-accordion__btn__img"><img src="../assets/images/cp/arrow.png"
+                                    <div class="p-accordion__btn__img"><img src="arrow.png"
                                             alt="" /></div>
                                 </div>
                                 <div class="p-accordion__content">
@@ -424,7 +424,7 @@
                                     <div class="p-accordion__btn__subttl" data-target="browserChecker">APPLICATION
                                         REQUIREMENTS
                                     </div>
-                                    <div class="p-accordion__btn__img"><img src="../assets/images/cp/arrow.png"
+                                    <div class="p-accordion__btn__img"><img src="arrow.png"
                                             alt="" /></div>
                                 </div>
                                 <div class="p-accordion__content">
@@ -489,7 +489,7 @@
                                     <div class="p-accordion__btn__subttl" data-target="browserChecker">APPLICATION
                                         REQUIREMENTS
                                     </div>
-                                    <div class="p-accordion__btn__img"><img src="../assets/images/cp/arrow.png"
+                                    <div class="p-accordion__btn__img"><img src="arrow.png"
                                             alt="" /></div>
                                 </div>
                                 <div class="p-accordion__content">
@@ -568,7 +568,7 @@
                                     <div class="p-accordion__btn__subttl" data-target="browserChecker">APPLICATION
                                         REQUIREMENTS
                                     </div>
-                                    <div class="p-accordion__btn__img"><img src="../assets/images/cp/arrow.png"
+                                    <div class="p-accordion__btn__img"><img src="arrow.png"
                                             alt="" /></div>
                                 </div>
                                 <div class="p-accordion__content">
