--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                                 <h3 class="c-top_block__hdg--lv2" data-target="browserChecker" data-lineAnim="1.2">
                                     旅のパートナー</h3>
                                 <p class="c-top_block__copy add-line__before" data-target="browserChecker"
-                                    data-FadeIn="2">数量限定発売。</p><a class="c-btn add-line c-top_block_btn"
+                                    data-FadeIn="2">旅行サービス特別優待</p><a class="c-btn add-line c-top_block_btn"
                                     href="http://www.saisoncard.co.jp/rd/3161813-sbs" data-target="browserChecker"
                                     data-FadeIn="2.5">お申込みはこちら<span class="lineBox"><span
                                             class="animLine"></span></span></a>
@@ -548,7 +548,7 @@
                                 <h3 class="c-top_block__hdg--lv2" data-target="browserChecker" data-lineAnim="1.2">
                                     日常生活を特別に</h3>
                                 <p class="c-top_block__copy add-line__before" data-target="browserChecker"
-                                    data-FadeIn="2">数量限定発売。</p><a class="c-btn add-line c-top_block_btn"
+                                    data-FadeIn="2">日常サービス特別優待</p><a class="c-btn add-line c-top_block_btn"
                                     href="http://www.saisoncard.co.jp/rd/3161813-sbs" data-target="browserChecker"
                                     data-FadeIn="2.5">お申込みはこちら<span class="lineBox"><span
                                             class="animLine"></span></span></a>
