動画を映すようになりました

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                                         <source media="(max-width: 768px)"
                                             srcset="./assets/images/top/mv_bg_human_sp.jpg" />
                                         <!--<img src="assets/images/top/mv_bg_human_pc.jpg" alt="" />-->
-                                        <video src="Tower - 49845.mp4" autoplay poster="myVideo.mp4" loop muted></video>
+                                        <video src="Tower - 49845.mp4" autoplay playsinline poster="myVideo.mp4" loop muted></video>
                                         <div class="blackBox"></div>
                                     </picture>
                                 </div>
